# veritas

./: Cargo.toml  Makefile  readme.md
src/: db.rs  main.rs  server.rs  structs.rs.old
