[package]
name = "veritas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
etcd-client = "0.10"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
log = { version = "0.4.17", features = ["kv_unstable"] }
simple_logger = "4.0.0"
actix-web = "4"
